feat(diagnostics): added precise environment page
