# internal/openapi/swagger.yaml
@@ -4885,6 +4885,28 @@ paths:
       summary: Diagnostics SSE stream
       tags:
       - diagnostics
+  /dns-check/client:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.DnsCheckStartResponseEnvelope'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.APIErrorEnvelope'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.APIErrorEnvelope'
+      security:
+      - CookieAuth: []
+      summary: Client context for diagnostics
+      tags:
+      - dns-check
   /dns-check/probe:
     get:
       produces:
